Colaboratory를 통해 생성됨

--- a/Day2.ipynb
+++ b/Day2.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Day2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyONxE9m2deHx2X+Jq67xAvv",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPr45dHATVTelyQP0ljTBe1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +30,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0hSm36YmnkrL",
-        "outputId": "df1d92fd-58e4-40eb-a6ad-ba4a48015219"
+        "outputId": "382bee1e-16ba-4f04-da02-ca052a9a1740"
       },
       "outputs": [
         {
@@ -68,7 +69,7 @@
       "metadata": {
         "id": "an1KMRq9w8im"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -88,9 +89,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4O_00VFeziTj",
-        "outputId": "f641e176-4370-483a-bb25-a8a904bef2e6"
+        "outputId": "4fc10edc-0f79-4fd6-c244-63a123867c5c"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,9 +122,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Tus4txNk1VOe",
-        "outputId": "7745c3ab-7692-4a43-e321-a0d4f15821a6"
+        "outputId": "579934bf-b8db-4c36-ac54-1e0e759fc1f9"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,9 +185,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vTM4yiVa7m8L",
-        "outputId": "c7cc511c-96c2-457f-e1fe-bb2efd516140"
+        "outputId": "102c338b-e960-4a5e-c546-fef56bb1ed7d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,10 +221,24 @@
         "print(score)"
       ],
       "metadata": {
-        "id": "DcyRnWyyFa3i"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DcyRnWyyFa3i",
+        "outputId": "63b9b814-b355-47e6-ac91-0982c11a45f9"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[100, 80, 90, 60]\n",
+            "[100, 80, 90, 60, 60]\n",
+            "[100, 80, 90, 60, 60, 70]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -234,10 +249,22 @@
         "print(score)"
       ],
       "metadata": {
-        "id": "FPSdDTobJKCn"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FPSdDTobJKCn",
+        "outputId": "4baf3fbf-5eaf-410d-dacc-dee0e00b0150"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 100, 80, 90, 60, 60, 70]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -252,10 +279,23 @@
         "print(list_a)"
       ],
       "metadata": {
-        "id": "nnM0pCSOMR8N"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nnM0pCSOMR8N",
+        "outputId": "a548d57f-07c7-45dd-c1ed-d9ae77ea4dc8"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 2, 3, 4]\n",
+            "[0, 4]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -266,10 +306,22 @@
         "print(list_a)"
       ],
       "metadata": {
-        "id": "GG1GUzckNNef"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GG1GUzckNNef",
+        "outputId": "a9bb2f6c-d736-433d-ee1d-e72164e9454c"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -284,10 +336,22 @@
         "# list_a,clear(1) # 동일한 값이 있어도 전부 삭제 가능하다"
       ],
       "metadata": {
-        "id": "yUGyBjfEOcA8"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yUGyBjfEOcA8",
+        "outputId": "46b15867-5e26-4511-9fd9-aac578baf508"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 3, 1, 2]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -298,10 +362,469 @@
         "print(44 in list)"
       ],
       "metadata": {
-        "id": "3isXkIa2Qehg"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3isXkIa2Qehg",
+        "outputId": "d8cc564e-da0c-4eb3-829a-8ec96268c416"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 딕셔너리\n",
+        "# 리스트가 인덱스를 기반으로 값을 저장한다면 딕셔너리는 키값을 기반으로 저장한다\n",
+        "\n",
+        "# 중괄호{}을 사용하여 데이터를 저장한다\n",
+        "# 삽입/삭제 가 가능하다\n",
+        "# 순서가 없으므로 인덱싱과 슬라이싱은 불가능하다\n",
+        "\n",
+        "dict = {\n",
+        "    \"name\":\"엔드 게임\",\n",
+        "    \"type\":\"히어로 무비\",\n",
+        "    \"price\":10000\n",
+        "}\n",
+        "print(dict)\n",
+        "print(dict[\"name\"])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QdbjxVw_jOpo",
+        "outputId": "76a4d4cd-4241-4a0c-a492-28b7c163561d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'name': '엔드 게임', 'type': '히어로 무비', 'price': 10000}\n",
+            "엔드 게임\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict = {\n",
+        "    \"감독\":[\"안소니\",\"루소\"],\n",
+        "    \"배우\":[\"타노스\",\"토르\",\"헐크\"]\n",
+        "}\n",
+        "print(dict[\"감독\"])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K5u4czDulJW5",
+        "outputId": "1e9f507a-cdf1-4f43-e916-c32385c4c984"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['안소니', '루소']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict = {\n",
+        "    \"name\":\"건조 망고\",\n",
+        "    \"type\":\"절임 관리\",\n",
+        "    \"ingredient\":[\"망고\",\"설탕\",\"색소\"],\n",
+        "    \"origin\":\"필리핀\"\n",
+        "}\n",
+        "\n",
+        "print(dict[\"ingredient\"])\n",
+        "print(dict[\"ingredient\"][0])\n",
+        "print(dict[\"ingredient\"].pop())\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2_DHAW_WmVIs",
+        "outputId": "0fbe588b-9289-4f5e-832a-7e4a36af7c7c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['망고', '설탕', '색소']\n",
+            "망고\n",
+            "색소\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict = {}\n",
+        "print(dict)\n",
+        "\n",
+        "dict['name'] = \"이름\"\n",
+        "dict['age'] = 30\n",
+        "print(dict)\n",
+        "\n",
+        "del dict[\"name\"]\n",
+        "print(dict)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1zIVuFCMojrF",
+        "outputId": "5a7b43c4-082d-4275-aac7-2ea91ffda263"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{}\n",
+            "{'name': '이름', 'age': 30}\n",
+            "{'age': 30}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 딕셔너리에서 자주 등장하는 에러\n",
+        "# KeyError : 딕셔너리에 없는 키값을 사용하면 나타나는 에러\n",
+        "\n",
+        "dict ={\n",
+        "    \"name\":\"건조 망고\",\n",
+        "    \"type\":\"절임 관리\",\n",
+        "    \"ingredient\":[\"망고\",\"설탕\",\"색소\"],\n",
+        "    \"origin\":\"필리핀\"\n",
+        "}\n",
+        "\n",
+        "key = input(\"출력를 원하는 키값을 입력하세요 : \")\n",
+        "\n",
+        "if key in dict:\n",
+        "  print(dict[key])\n",
+        "else:\n",
+        "  print(\"존재하지 않는 키값입니다\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Sv2eV4WspB46",
+        "outputId": "d345e1e6-4c7b-4135-ba6f-bac1613c7eb3"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "출력를 원하는 키값을 입력하세요 : aa\n",
+            "존재하지 않는 키값입니다\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Set\n",
+        "# 중괄호를 사용하여 작성한다\n",
+        "# 중복을 허용하지 않는다. 순서가 없다. 그래서 인덱싱 슬라이싱이 불가능하다\n",
+        "# set 자료형의 값을 꺼내려면 리스트나 튜플로 변환하여 사용한다\n",
+        "\n",
+        "set_ex1 = {1,1,1,2,2,2,2,2,2,3,3}\n",
+        "print(set_ex1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LfegOxEZrb5o",
+        "outputId": "95259e16-35f3-46ed-a29c-dc4911dfc956"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1, 2, 3}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s1 = set([1,2,3])\n",
+        "print(type(s1))\n",
+        "print(s1)\n",
+        "\n",
+        "li = list(s1)\n",
+        "print(type(li))\n",
+        "print(li[0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h2fBlXsw3F0p",
+        "outputId": "1ce59fa4-a9da-4352-da86-369095291cdc"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'set'>\n",
+            "{1, 2, 3}\n",
+            "<class 'list'>\n",
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# A1\n",
+        "num = input(\"학번을 입력하세요\")\n",
+        "\n",
+        "print(f'{num[0]}학년 {num[1:3]}반 {num[3:]}반 ')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Xra3A8Ua5vf6",
+        "outputId": "480d41da-3314-4e99-fcb6-88984cebd119"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "학번을 입력하세요31025\n",
+            "3학년 10반 25반 \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# A2\n",
+        "\n",
+        "num = input(\"차량 번호를 입력하세요\")\n",
+        "\n",
+        "print(\"{}의 차량번호 끝 4자리는 {}입니다.\".format(num,num[-4:]))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gNnRfB6aCA9C",
+        "outputId": "9d04c1d2-6604-4bc7-c93b-4646f895191f"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "차량 번호를 입력하세요서울3가1234\n",
+            "서울3가1234의 차량번호 끝 4자리는 입니다.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# A3\n",
+        "\n",
+        "name = input(\"홀수 갯수의 문자열 입력\")\n",
+        "num = int(len(name)/2)\n",
+        "print(name[num])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sPMb-qE7DnnO",
+        "outputId": "876aec26-34bd-4522-d2b7-2ee20dfda418"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "홀수 갯수의 문자열 입력132\n",
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# A4\n",
+        "list_ex = [1,2,3,4,5,6,7,8,9]\n",
+        "\n",
+        "print(list_ex[2:8][1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ECWElcZcHzQN",
+        "outputId": "89a323d8-5d1f-4809-af4a-9bccf9e96bec"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# A5\n",
+        "num = int(input(\"숫자를 입력하세요\"))\n",
+        "if num%3:\n",
+        "  print(\"{}는 3의 배수가 아닙니다\".format(num))\n",
+        "else:\n",
+        "  print(\"{}는 3의 배수입니다\".format(num))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l8II8hZKRo8O",
+        "outputId": "c0710e84-5209-4813-ac3e-9eeaa5a1cd7e"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "숫자를 입력하세요2\n",
+            "2는 3의 배수입니다\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1 = int(input(\"정수1 입력\"))\n",
+        "num2 = int(input(\"정수2 입력\"))\n",
+        "num3 = int(input(\"정수3 입력\"))\n",
+        "\n",
+        "if num1>num2:\n",
+        "  if num1>num3:\n",
+        "    max = num1\n",
+        "  else:\n",
+        "    max = num3\n",
+        "else:\n",
+        "  if num2>num3:\n",
+        "    max = num2\n",
+        "  else:\n",
+        "    max = num3\n",
+        "\n",
+        "print(\"가장 큰수는 {} 입니다\".format(max))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1BAXnMTYU9A7",
+        "outputId": "81d98974-1374-4b25-a9fd-8065efe79b25"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "정수1 입력3\n",
+            "정수2 입력5\n",
+            "정수3 입력6\n",
+            "가장 큰수는 2 입니다\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1 = int(input(\"정수1 입력\"))\n",
+        "num2 = int(input(\"정수2 입력\"))\n",
+        "num3 = int(input(\"정수3 입력\"))\n",
+        "\n",
+        "li =[]\n",
+        "li.append(num1)\n",
+        "li.append(num2)\n",
+        "li.append(num3)\n",
+        "\n",
+        "li.sort()\n",
+        "\n",
+        "print(li.pop())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TrDayohBV4_H",
+        "outputId": "0e3b021c-55b2-462f-f1e4-5b19a052c8ca"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "정수1 입력3\n",
+            "정수2 입력5\n",
+            "정수3 입력1\n",
+            "5\n"
+          ]
+        }
+      ]
     }
   ]
 }
