--- a/Day4.ipynb
+++ b/Day4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "60f0b085",
+   "id": "c025de52",
    "metadata": {},
    "outputs": [
     {
@@ -21,8 +21,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "b9a33807",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a4ae6612",
+   "id": "4b977746",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fafa124",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a12a3c87",
    "metadata": {},
    "outputs": [],
    "source": []
